unit tests for OrchestrationSynthesisOperator.java reachability
Signed-off-by: Davide Basile <davide.basile@isti.cnr.it>